# delibird

./: .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
scripts/: demo.py  s3_exporter.py
src/delibird/: __init__.py
src/delibird/core/: package.py  protocols.py
src/delibird/encoders/: paginated_pydantic_encoder.py  pydantic_encoder.py
src/delibird/exporters/: s3.py
tests/: conftest.py
tests/core/: test_file.py  test_folder.py  test_package.py  test_validation.py
tests/encoders/: test_paginated_pydantic.py
